<resources>
    <string name="app_name">云上后稷</string>
    <!--common 公用字符串-->
    <string name="common_no_net">网络请求失败，请检查网络</string>
    <string name="common_socket_timeout">网络连接超时，请稍后再试</string>
    <string name="common_no_net_tip">加载失败,请检查网络是否开启</string>
    <string name="common_err_null_url">url地址为空</string>
    <string name="common_other_error">太受欢迎了，请稍后再来</string>

    <string-array name="port">
        <item>网络</item>
        <item>蓝牙</item>
        <item>USB</item>
    </string-array>

    <string name="connect">连接</string>
    <string name="discon">断开</string>
    <string name="hint">Please input IP</string>
    <string name="contextandcode">print context,lineAndBarCode</string>
    <string name="read">Read Buffer</string>
    <string name="image">Print Image</string>
    <string name="image1">Print Raste Image</string>
    <string name="text">Print text and cutpaper</string>
    <string name="barcode">Print barCode</string>
    <string name="bleselect">Please select BLE dev</string>
    <string name="usbselect">Please select USB dev</string>
    <string name="toast_discon_success">Disconnect success</string>
    <string name="toast_discon_faile">Disconnect success</string>
    <string name="toast_present_con">there is no connection</string>
    <string name="send_success">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="not_con_printer">there is no connection</string>
    <string name="usb_pre_con">present connected Usb dev:</string>
    <string name="con_success">连接成功</string>
    <string name="con_failed">连接失败</string>
    <string name="con_has_discon">connection has disconnected</string>
    <string name="sb">Select</string>
    <string name="start_pos_activity">Start PosPrint</string>
    <string name="start_76_activity">Start 76 PosPrint</string>
    <string name="start_tsc_activity">Start TSC PosPrint</string>
    <string name="qrcode">Print QRcode</string>
    <string name="none_ble_device">no devices are found</string>
    <string name="none_ipaddress">pleesa input the ipaddress first!</string>
    <string name="connect_first">please connet the printer first!</string>
    <string name="this_is_text">This is Text!</string>
    <string name="text_for">text for!</string>
    <string name="error_level">error_level</string>
    <string name="qrcode_content">input content，create QRCode</string>
    <string name="qrcode_clear">clear</string>
    <string name="qrcode_creat">creat</string>
    <string name="qrcode_print">print</string>
    <string name="qrcode_scan">scan</string>
    <string name="none_content">please input content first！</string>
    <string name="check_linke">checkLink</string>
    <string name="net_connet_loss">network connect loss,please go back and connet the printer again</string>
    <string name="l58">58</string>
    <string name="l80">80</string>
    <string name="barcodePrinter">两寸三寸条码机</string>
    <string name="teminal">票据打印机</string>
    <string name="barcode_printer">标签打印机</string>
    <string name="no_device">没有USB设备</string>
    <string name="please_device">请选择设备</string>
    <string name="sample">样张</string>
    <string name="print_text">打印文本</string>
    <string name="print_barcode">一维条码</string>
    <string name="print_qrcode">二维条码</string>
    <string name="print_bitmap">光栅位图</string>
    <string name="other_printer"> 其他打印机</string>
    <string name="printer_76">76 printer</string>
    <string name="printer_58IId">58IID </string>
</resources>
