<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.cnbec.catering.ui.main.activity.print.LinkPrintActivity">

    <include
        android:id="@+id/titleView"
        layout="@layout/layout_title_01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/printImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@mipmap/img_print"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="已选设备："/>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:text="未选择"/>

            <Button
                android:id="@+id/option_button"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:text="选择"
                android:layout_marginRight="15dp"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="测试标签打印机："/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/bt_tsp"
                android:layout_marginRight="15dp"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/sample"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt_text"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/print_text"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_barcode"
                android:layout_marginRight="15dp"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/print_barcode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/bt_qr"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/print_qrcode"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_bitmap"
                android:textColor="@color/text_white"
                android:background="@drawable/stroke_background_09"
                android:layout_marginRight="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/print_bitmap"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>